<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:title="@string/homeMenu"
        android:icon="@drawable/ic_action_home"/>

    <item
        android:id="@+id/menuMeeting"
        android:title="@string/meetingMenu"
        android:icon="@drawable/ic_action_friend"/>

    <item
        android:id="@+id/menuAdd"
        android:title="@string/addMenu"
        android:icon="@drawable/ic_action_add"/>

    <item
        android:id="@+id/menuCalender"
        android:title="@string/scheduleMenu"
        android:icon="@drawable/ic_action_calendar"/>

    <item
        android:id="@+id/menuProfile"
        android:title="@string/profileMenu"
        android:icon="@drawable/ic_action_profile"/>

</menu>