<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".TimelineActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <RelativeLayout
            android:id="@+id/header"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/headerBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:text="@string/timelinePage"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/backButton"

                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"

                android:src="@drawable/ic_action_back" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header">

            <RelativeLayout
                android:id="@+id/checkTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/checkTimeLine"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/primaryColor"
                    android:text="@string/location"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/building"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/time1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignEnd="@id/check1"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"

                        android:text="@string/timelineMajor1"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/major1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignStart="@id/check1"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"

                        android:text="@string/timelinePageMajor1"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/description1"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_below="@id/major1"
                        android:layout_alignStart="@id/check1"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/description1"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/check1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_action_check" />

                    <View
                        android:id="@+id/line1"
                        android:layout_width="5dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/timeline1"

                        android:layout_marginStart="131dp"
                        android:layout_marginTop="5dp"
                        android:background="#629725" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/time2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignEnd="@id/check2"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"

                        android:text="@string/timelineMajor2"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/major2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignStart="@id/check2"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"

                        android:text="@string/timelinePageMajor2"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/description2"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_below="@id/major2"
                        android:layout_alignStart="@id/check2"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/description2"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/check2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_action_check" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="5dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/timeline2"

                        android:layout_marginStart="131dp"
                        android:layout_marginTop="5dp"
                        android:background="#629725" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/time3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignEnd="@id/check3"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"

                        android:text="@string/timelineMajor3"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/major3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignStart="@id/check3"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"

                        android:text="@string/timelinePageMajor3"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/description3"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_below="@id/major3"
                        android:layout_alignStart="@id/check3"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/description3"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/check3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_action_check" />

                    <View
                        android:id="@+id/line3"
                        android:layout_width="5dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/timeline3"

                        android:layout_marginStart="131dp"
                        android:layout_marginTop="5dp"
                        android:background="#629725" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/time4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/time3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignEnd="@id/check4"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"

                        android:text="@string/timelineMajor4"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/major4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignStart="@id/check4"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="10dp"

                        android:text="@string/timelinePageMajor4"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/description4"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_below="@id/major4"
                        android:layout_alignStart="@id/check4"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/description4"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/check4"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="120dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_action_check" />

                    <View
                        android:id="@+id/line4"
                        android:layout_width="5dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/timeline4"

                        android:layout_marginStart="131dp"
                        android:layout_marginTop="5dp"
                        android:background="#629725" />
                </RelativeLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/time4"
                    android:layout_centerInParent="true"
                    android:layout_marginVertical="10dp"

                    android:layout_marginStart="60dp"
                    android:layout_marginEnd="60dp"

                    android:layout_marginBottom="10dp"

                    android:background="@drawable/rounded_corner"
                    android:text="@string/joinMeetingButtonTimelinePage"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonText"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>