<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".AboutAppActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/headerBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:text="@string/aboutAppPage"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/backButton"

                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"

                android:src="@drawable/ic_action_back" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"

            android:layout_marginBottom="60dp"
            android:text="@string/groupProject"
            android:textColor="@color/primaryColor"
            android:textSize="14sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="200dp"

                    android:src="@drawable/felogo" />

                <TextView
                    android:id="@+id/nameApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile"

                    android:layout_centerInParent="true"
                    android:text="@string/nameApp"
                    android:textColor="@color/primaryColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameApp"

                    android:layout_centerInParent="true"
                    android:text="@string/versionApp"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>