<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".JoinerListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <RelativeLayout
            android:id="@+id/header"
            android:background="@color/headerBar"

            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:text="@string/joinersListPage"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/backButton"

                android:layout_width="35dp"
                android:layout_height="35dp"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"

                android:src="@drawable/ic_action_back" />

        </RelativeLayout>

        <!-- Scroll View-->
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/header">

            <LinearLayout
                android:id="@+id/layoutScrollView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.widget.SearchView
                    android:id="@+id/searchBar"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"

                    android:background="@drawable/rounded_corner"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/searchJoinerListPage"/>

                <RelativeLayout
                    android:id="@+id/joiners_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/checkBox"

                        android:layout_width="25dp"
                        android:layout_height="25dp"

                        android:layout_marginStart="18dp"

                        android:contentDescription="@string/userCheckBox"
                        android:src="@drawable/ic_action_box" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignStart="@id/checkBox"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="30dp"

                        android:text="@string/userCheckBox"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"

                        android:text="@string/nameText"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"

                        android:text="@string/schoolText"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:id="@+id/line"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"

                    android:background="@color/line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/line" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>